--- a/style.css
+++ b/style.css
@@ -300,3 +300,15 @@ body {
     from {opacity: 1;} 
     to {opacity: 0;}
 }
+
+.reloadWrap {
+    position: absolute;
+    top: 10%;
+    z-index: 1000;
+    left: 50%;
+    transform: translate(-50%, 0%);
+}
+
+.reloadWrap .button {
+    margin-top: 0;
+}
